static/css/style.css
/* ... */
a:hover {
    text-decoration: none;
    color: var(--primary-colour);
}

ul {
    list-style-type: none;
}

label {
    display: block;
    padding: 0.5rem 0;
}

input[type='checkbox'] {
    width:auto !important;
}

input[type='checkbox']:focus {
    box-shadow: none;
}

button {
    border: 0;
    padding: 1.6rem 3.2rem 1.6rem 3.2rem;
    background-color: var(--primary-colour);
    color: white;
    font-size: 1.6rem;
    line-height: 1.5;
    font-weight: 500;
    border-radius: 0.5rem;
    text-transform: uppercase;
    box-shadow: var(--text-shadow-light);
    border: 2px solid var(--primary-colour);
    transform: translateX(0);
    transition: all 0.3s ease-in;
}

.btn {
    font-size: 1.6rem;
}

button:hover {
    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
    color: white;
}

button:active {
    background-color: white;
    color: var(--primary-colour);
}

.navbar-brand {
    padding: 0 5rem;
    font-size: 3.6rem;
}

.nav-link {
    margin: 0 1.5rem;
}

.nav-link:hover {
    font-weight: 700;
}

#active {
    font-weight: 400;
}

.profile {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.profile > * {
    margin: 1rem;
}

.profile a {
    padding: 1rem;
}

.profile a:hover {
    color: white;
    font-weight: 400;
}

.user-info {
    display: flex;
}

.user-info i {
    padding-right: 1.6rem;
}

.user-info p {
    margin: 0;
}

/* Header Image */
.header-image {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    overflow: hidden;
}
.header-image img {
    width: 100%;
    height: 95vh;
    position: relative;
    clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0% 75%);
}

.article.header-image img {
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 75%);

}
.header-image h1 {
    color: white;
    font-size: 10rem;
    font-family: 'Vast Shadow', cursive;
    text-align: center;
    text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
    position: absolute;
    /* top: 50%; */
}

/* https://codepen.io/Souflogi/pen/Ybmybv */
.ribbon {
    width: 150px;
    height: 150px;
    overflow: hidden;
    position: absolute;
    top: -10px;
    right: -10px;
 
}
.ribbon__content {
   left: -5rem;
   top: 5rem;
   -webkit-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
   position: absolute;
   display: block;
   width: 225px;
   padding: 10px 0;
   box-shadow: 0 0px 10px ;
   color: #fff;
   font-weight: 400;
   text-shadow: 0 1px 1px rgba(0,0,0,.5);
   text-transform: uppercase;
   text-align: center;
   border: 2px dotted #fff;
   outline : 5px solid  #f5cd79; 
}

.ribbon::before {
   top: 0;
   left: 0;
   border-top-color: transparent;
   border-right-color: transparent;
   position: absolute;
   z-index: -1;
   content: '';
   display: block;
   border: 5px solid #f19066;
   box-sizing: content-box;

}
.ribbon::after {
   bottom: 0;
   right: 0;
   border-top-color: transparent;
   border-right-color: transparent;
   position: absolute;
   z-index: -1;
   content: '';
   display: block;
   border: 5px solid #f19066;
}  

.review {
    background-color: #00aa63;
}

.tips {
    background-color: #ecce25;
}

.techinque {
    background-color: #e9831e;
    color: black;
}

.article-badge {
    background-color: #aa0000da;
}

/* Footer */

footer {
    margin: 0 auto;
    min-height: 25vh;
    background-color: black;
    color: white;
    font-weight: bold;
    /* display: grid;
    grid-template-columns: 1fr 2fr 1fr; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    justify-items: center;
}

.social-links {
    margin: 0 auto;
}

footer ul {
    display: flex;
    justify-content: center;
    padding: 1.5rem;
    list-style: none;
}

footer a {
    padding: 0 10px;
    text-decoration: none;
    font-size: 3.6rem;
    color: white;
}

footer a:hover {
    transition: 0.4s ease;
}

#facebook:hover {
    color: #4267b2;
}

#twitter:hover {
    color: #00acee;
}

/* https://stackoverflow.com/questions/37751375/instagram-new-logo-css-background */
/* https://css-tricks.com/snippets/css/gradient-text/ */

#instagram:hover {
    background: radial-gradient(
        circle at 30% 107%,
        #fdf497 0%,
        #fdf497 5%,
        #fd5949 45%,
        #d6249f 60%,
        #285aeb 90%
    );
    color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
}

#youtube:hover {
    color: red;
}

.footer-links a {
    font-size: 1.4rem;
}

.google {
    color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
    background-image: linear-gradient(210deg, transparent 66.4%, #4DB849 33%, #328440),
    linear-gradient(90deg, transparent 72%, #D01D21 33%, #F06B59),
    linear-gradient(150deg, transparent 60%, #D01D21 33%, #D01D21),
    linear-gradient(330deg, transparent 66.45%, #FCD209 33%, #D49B28),
    linear-gradient(37deg, transparent 58%, #FCD209 33%, #FCD209),
    linear-gradient(280deg, transparent 58%, #4DB849 33%, #4DB849),
    linear-gradient(150deg, transparent 54%, #D01D21 33%, #D01D21);
}

/* Category Tile */

#categories {
    width: 100%;
    margin: 5rem auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
    grid-gap: 2.5rem;
}

.category {
    max-height: 15rem;
    width: 100%;
    height: 20vh;
    overflow: hidden;
    padding: 0;
    position: relative;
    padding: 1.5rem 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.category-image {
    width: 100%;
    overflow: hidden;
    object-fit: contain;
    object-position: center;
    transform: scale(1);
    transition: all 0.3s;
}

.category h4 {
    color: white;
    font-family: 'Vast Shadow', cursive;
    font-size: 3.6rem;
    text-align: center;
    text-shadow: var(--text-shadow-dark);
    width: 100%;
    position: absolute;
    top: 33%;
    z-index: 2;
}
/* ... */

